--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ nav{
     justify-content: space-between;
     align-items: center;
     position: sticky;
-    top: 30px;
+    top: 0px;
+    padding:  0 2%;
 }
 nav ul{
     display: flex;
@@ -187,6 +188,7 @@ nav ul il {
     margin: left -20px;
     margin-block-start: 10px;
     text-align: left;
+    display: flex;
     
     
 }
@@ -242,13 +244,16 @@ nav ul il {
  
 
 .stats-box {
-        height: 200px;
+        height: 250px;
         background-color: white;
-        border-radius: 7%;
-        width: 25%;
-        margin-right: 5%;
+        border-radius: 2%;
+        border-color: #00b39b;
+        width: 50%;
+        margin-right: 10%;
         padding-top: 5%;
         align-items: center;
+
+
 
         
         
@@ -256,10 +261,11 @@ nav ul il {
     }
 .stats-box-colomn-2 {
         display: flex;
-        margin-top:10%;
+        margin-top: 0%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: grey;
         justify-content: flex-end;
+
         
     }
 .stats-box-colomn-1 {
@@ -406,3 +412,14 @@ footer
     color: black;
     opacity: .7;
 }
+.box-1 {
+    margin-top: 20px;
+}
+.box-3{
+    margin-top: 30px;
+    margin-bottom: 3px;
+}
+.box-2 {
+    margin-top: 5px;
+}
+
